bk_ida/gccida/g1/wipe_dead_reg
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/wipe_dead_reg/src/local-alloc.c:2589:20: error: use of undeclared identifier 'this_insn_0'; did you mean 'this_insn'?
if ( **( _WORD **)&this_insn_0[2] == 39 ) 
                   ^~~~~~~~~~~
                   this_insn
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/wipe_dead_reg/src/local-alloc.c:243:12: note: 'this_insn' declared here
static rtx this_insn;
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/wipe_dead_reg/src/local-alloc.c:2591:21: error: use of undeclared identifier 'this_insn_0'; did you mean 'this_insn'?
if ( multiple_sets( this_insn_0) ) 
                    ^~~~~~~~~~~
                    this_insn
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/wipe_dead_reg/src/local-alloc.c:243:12: note: 'this_insn' declared here
static rtx this_insn;
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/wipe_dead_reg/src/local-alloc.c:2593:35: error: use of undeclared identifier 'this_insn_0'; did you mean 'this_insn'?
v5 = **( _DWORD **)( *( _QWORD *)&this_insn_0[2] + 8LL) - 1; 
                                  ^~~~~~~~~~~
                                  this_insn
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/wipe_dead_reg/src/local-alloc.c:243:12: note: 'this_insn' declared here
static rtx this_insn;
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/wipe_dead_reg/src/local-alloc.c:2598:47: error: use of undeclared identifier 'this_insn_0'; did you mean 'this_insn'?
v6 = *( _QWORD *)( *( _QWORD *)( *( _QWORD *)&this_insn_0[2] + 8LL) + 8LL * v5 + 8); 
                                              ^~~~~~~~~~~
                                              this_insn
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/wipe_dead_reg/src/local-alloc.c:243:12: note: 'this_insn' declared here
static rtx this_insn;
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/wipe_dead_reg/src/local-alloc.c:2616:21: error: use of undeclared identifier 'machine_mode'
mark_life( rtint, ( machine_mode)*( ( unsigned __int8 *)reg + 2), 0); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/wipe_dead_reg/src/local-alloc.c:2619:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)reg + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/wipe_dead_reg/src/local-alloc.c:2627:23: error: use of undeclared identifier 'this_insn_0'; did you mean 'this_insn'?
if ( find_regno_note( this_insn_0, REG_INC, rtint) ) 
                      ^~~~~~~~~~~
                      this_insn
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/wipe_dead_reg/src/local-alloc.c:243:12: note: 'this_insn' declared here
static rtx this_insn;
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/wipe_dead_reg/src/local-alloc.c:2634:21: error: use of undeclared identifier 'machine_mode'
mark_life( rtint, ( machine_mode)*( ( unsigned __int8 *)reg + 2), 0); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/wipe_dead_reg/src/local-alloc.c:2640:1: error: use of undeclared identifier 'qty_0'
qty_0[v4].death = output_p + 2 * this_insn_number; 
^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/wipe_dead_reg/src/obj/local-alloc.o] Error 1
